--- a/canada.html
+++ b/canada.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Canada Illustration</title>
+    <title>Germany Illustration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
@@ -12,21 +12,13 @@
     <div class="container">
         <div class="upper-main">
             <div class="country-name">
-                <h1>CANADA</h1>
+                <h1>GERMANY</h1>
             </div>
             <div class="country-banner">
                 <div class="country-flag">
-                    <div class="canada-flag">
-                        <div class="left-red"></div>
-                        <div class="white">
-                            <div class="marple">
-                                <div class="right-top-marple"></div>
-                                <div class="middle-marple"></div>
-                                <div class="left-top-marple"></div>
-                                <div class="marple-bottom"></div>
-                            </div>
-                        </div>
-                        <div class="right-red"></div>
+                    <div class="germany-flag">
+                        <div class="top-black"></div>
+                        <div class="bottom"></div>
                     </div>
                 </div>
                 <div class="county-welcome">
@@ -38,39 +30,22 @@
                     </span>
                 </div>
             </div>
-            <div class="hill-top"></div>
-            <div class="hill-top2"></div>
-            <div class="hill-drop"></div>
-            <div class="hill-drop2"></div>
-            <div class="hill-drop3"></div>
-            <div class="hill-drop4"></div>
-            <div class="hill"></div>
-            <div class="hill2"></div>
-            <div class="hill-div"></div>
-            <div class="hill-div2"></div>
+            <!-- add german building -->
+            <div class="german-building"></div>
         </div>
         <div class="lower-main">
             <div class="hill-shadow"></div>
         </div>
-        <div class="canadian">
-            <div class="canadian-head"></div>
-            <div class="hat-ban">
-                <div class="cap-hold">
-                    <div class="marple">
-                        <div class="right-top-marple"></div>
-                        <div class="middle-marple"></div>
-                        <div class="left-top-marple"></div>
-                        <div class="marple-bottom"></div>
-                    </div>
-                </div>
+        <div class="german">
+            <div class="german-head"></div>
+            <div class="hair-main">
+                <!--hair-->
+                <div class="h-left"></div>
+                <div class="h-right"></div>
             </div>
-            <div class="left-hat-ear"></div>
-            <div class="left-hat-tip"></div>
-            <div class="right-hat-ear"></div>
-            <div class="right-hat-tip"></div>
-            <div class="canadian-face">
-                <div class="hair"></div>
-                <div class="hair2"></div>
+            <!--ear-->
+            <div class="german-face">
+                <!--hairs -->
                 <div class="l-eye"></div>
                 <div class="l-inner-eye"></div>
                 <div class="nose"></div>
@@ -78,32 +53,18 @@
                 <div class="r-inner-eye"></div>
                 <div class="mouth"></div>
             </div>
-            <div class="canadian-neck">
-                <div class="h-line"></div>
-                <div class="h-line2"></div>
-            </div>
-            <div class="canadian-body">
-                <div class="colar"></div>
-                <div class="tie-head">
-                    <div class="line"></div>
-                </div>
-                <div class="tie">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="liner"></div>
+            <div class="german-neck"></div>
+            <div class="german-body">
+                <!--colar -->
+                <!--boot tie-->
             </div>
             <div class="l-elbow"></div>
-            <div class="l-hand">
-                <div class="line"></div>
-            </div>
+            <div class="l-hand"></div>
             <div class="r-elbow"></div>
-            <div class="r-hand">
-                <div class="line"></div>
-            </div>
+            <div class="r-hand"></div>
             <div class="l-finger"></div>
             <div class="r-finger"></div>
-            <div class="canadian-tip"></div>
+            <div class="german-tip"></div>
             <div class="left-lap"></div>
             <div class="left-lap-tip"></div>
             <div class="right-lap"></div>
@@ -117,9 +78,7 @@
             <div class="left-sow"></div>
             <div class="right-sow"></div>
         </div>
-        <div class="footer">
-            <span class="adroit">adroitly designed. 2019</span> 
-        </div>
+        <div class="footer"></div>
     </div>
 </body>
 </html>
