:wrench: still working

--- a/canada.html
+++ b/canada.html
@@ -31,16 +31,26 @@
                 </div>
             </div>
             <!-- add german building -->
-            <div class="german-building"></div>
+            <div class="german-building">
+                
+            </div>
         </div>
         <div class="lower-main">
             <div class="hill-shadow"></div>
         </div>
         <div class="german">
-            <div class="german-head"></div>
+            <div class="german-head">
+                <div class="cap"></div>
+                <div class="l-base-cap-cover"></div>
+                <div class="l-base-cap"></div>
+                <div class="base-cap"></div>
+                <div class="r-base-cap-cover"></div>
+                <div class="r-base-cap"></div>
+            </div>
             <div class="hair-main">
                 <!--hair-->
                 <div class="h-left"></div>
+                <div class="h-mid"></div>
                 <div class="h-right"></div>
             </div>
             <!--ear-->
@@ -57,6 +67,9 @@
             <div class="german-body">
                 <!--colar -->
                 <!--boot tie-->
+                <div class="left-stripe"></div>
+                <div class="mid-stripe"></div>
+                <div class="right-stripe"></div>
             </div>
             <div class="l-elbow"></div>
             <div class="l-hand"></div>
@@ -64,7 +77,14 @@
             <div class="r-hand"></div>
             <div class="l-finger"></div>
             <div class="r-finger"></div>
-            <div class="german-tip"></div>
+            <div class="german-tip">
+                <div class="inner">
+                    <div class="button-left"></div>
+                    <div class="button-left2"></div>
+                    <div class="button-right"></div>
+                    <div class="button-right2"></div>
+                </div>
+            </div>
             <div class="left-lap"></div>
             <div class="left-lap-tip"></div>
             <div class="right-lap"></div>
