--- a/japan.html
+++ b/japan.html
@@ -12,21 +12,12 @@
     <div class="container">
         <div class="upper-main">
             <div class="country-name">
-                <h1>CANADA</h1>
+                <h1>JAPAN</h1>
             </div>
             <div class="country-banner">
                 <div class="country-flag">
-                    <div class="canada-flag">
-                        <div class="left-red"></div>
-                        <div class="white">
-                            <div class="marple">
-                                <div class="right-top-marple"></div>
-                                <div class="middle-marple"></div>
-                                <div class="left-top-marple"></div>
-                                <div class="marple-bottom"></div>
-                            </div>
-                        </div>
-                        <div class="right-red"></div>
+                    <div class="japan-flag">
+                        <div class="middle-circle"></div>
                     </div>
                 </div>
                 <div class="county-welcome">
@@ -38,31 +29,12 @@
                     </span>
                 </div>
             </div>
-            <div class="hill-top"></div>
-            <div class="hill-top2"></div>
-            <div class="hill-drop"></div>
-            <div class="hill-drop2"></div>
-            <div class="hill-drop3"></div>
-            <div class="hill-drop4"></div>
-            <div class="hill"></div>
-            <div class="hill2"></div>
-            <div class="hill-div"></div>
-            <div class="hill-div2"></div>
+           <!-- Building -->
         </div>
-        <div class="lower-main">
-            <div class="hill-shadow"></div>
-        </div>
-        <div class="canadian">
-            <div class="canadian-head"></div>
-            <div class="hat-ban">
-                <div class="cap-hold">
-                    <div class="marple">
-                        <div class="right-top-marple"></div>
-                        <div class="middle-marple"></div>
-                        <div class="left-top-marple"></div>
-                        <div class="marple-bottom"></div>
-                    </div>
-                </div>
+        <div class="japan-image">
+            <div class="japan-head"></div>
+            <div class="japan-face">
+                
             </div>
             <div class="left-hat-ear"></div>
             <div class="left-hat-tip"></div>
