--- a/japan.html
+++ b/japan.html
@@ -32,7 +32,33 @@
            <!-- Building -->
         </div>
         <div class="japan-image">
-            <div class="japan-head"></div>
+            <div class="japan-head">
+                <div class="japan-hair-top"></div>
+                <div class="japan-hair-lowwer"></div>
+                <div class="japan-hair-left"></div>
+                <div class="japan-hair-right"></div>
+                <div class="japan-face">
+                    <div class="left-eye"></div>
+                    <div class="right-eye"></div>
+                </div>
+            </div>
+            <div class="japan-body">
+                <div class="left-chest"></div>
+                <div class="right-chest"></div>
+                <div class="left-arm"></div>
+                <div class="left-hand"></div>
+                <div class="right-arm"></div>
+                <div class="right-hand"></div>
+                <div class="belt"></div>
+                <div class="belt2"></div>
+                <div class="belt-mid"></div>
+                <div class="left-lap"></div>
+                <div class="left-leg"></div>
+                <div class="right-lap"></div>
+                <div class="right-leg"></div>
+                <div class="left-feet"></div>
+                <div class="right-feet"></div>
+            </div>
             <div class="japan-face">
                 
             </div>
