--- a/japan.html
+++ b/japan.html
@@ -30,6 +30,7 @@
                 </div>
             </div>
            <!-- Building -->
+           <div class="japan-building"></div>
         </div>
         <div class="japan-image">
             <div class="japan-head">
