--- a/nigeria-vote.html
+++ b/nigeria-vote.html
@@ -30,10 +30,18 @@
                     </span>
                 </div>
             </div>
+            <div class="adroit">
+                Your vote, your voice!
+                <span>HTML+CSSfy by: <a href="https://twitter.com/Bollybkampo">adroit</a> &copy; 2019</span>
+            </div>
            <!-- Building -->
         </div>
         <div class="election-2019">
             <div class="papper"></div>
+            <div class="hand"></div>
+            <div class="hand-inner"></div>
+            <div class="inner-sleeve"></div>
+            <div class="sleeve"></div>
             <div class="ballot-top-cover">
                 <div class="hole"></div>
             </div>
@@ -42,38 +50,6 @@
                 <div class="middle"></div>
             </div>
         </div>
-        <!--<div class="japan-image">
-            <div class="japan-head">
-                <div class="japan-hair-top"></div>
-                <div class="japan-hair-lowwer"></div>
-                <div class="japan-hair-left"></div>
-                <div class="japan-hair-right"></div>
-                <div class="japan-face">
-                    <div class="left-eye"></div>
-                    <div class="right-eye"></div>
-                </div>
-            </div>
-            <div class="japan-body">
-                <div class="left-chest"></div>
-                <div class="right-chest"></div>
-                <div class="left-arm"></div>
-                <div class="left-hand"></div>
-                <div class="right-arm"></div>
-                <div class="right-hand"></div>
-                <div class="belt"></div>
-                <div class="belt2"></div>
-                <div class="belt-mid"></div>
-                <div class="left-lap"></div>
-                <div class="left-leg"></div>
-                <div class="right-lap"></div>
-                <div class="right-leg"></div>
-                <div class="left-feet"></div>
-                <div class="right-feet"></div>
-            </div>
-            <div class="japan-face">
-                
-            </div>
-        </div>-->
     </div>
 </body>
 </html>
